--- a/MemoryMosaic/Pages/LibraryContent/No Date Taken.razor
+++ b/MemoryMosaic/Pages/LibraryContent/No Date Taken.razor
@@ -4,29 +4,23 @@
 <link href="css/LibraryContentPage.css" rel="stylesheet"/>
 
 @{
-    <header style="visibility: @headerVis">
+    <header style="visibility: @lcv.HeaderVis">
         <div id="buttons">
-            <button class="iconBtn"><span class="material-icons-outlined" @onclick="@libContentViewer.DownloadSelected">file_download</span></button>
-            <button class="iconBtn" @onclick="@(() => F.VisToggle(ref collectionsVis))"><span class="material-icons-outlined">collections</span></button>
-            <button class="iconBtn" title="Add or Remove Stars From Selected" @onclick="@(() => F.VisToggle(ref libContentViewer.starPromptVis))"><span class="material-icons-outlined">star_outline</span></button>
-            <button class="iconBtn" @onclick="@libContentViewer.DeleteBtnClick"><svg width="24px" height="24px" class="material-icons" viewBox="0 0 24 24"><path d="M15 4V3H9v1H4v2h1v13c0 1.1.9 2 2 2h10c1.1 0 2-.9 2-2V6h1V4h-5zm2 15H7V6h10v13zM9 8h2v9H9zm4 0h2v9h-2z"></path></svg></button>
+            <button class="iconBtn"><span class="material-icons-outlined" @onclick="@lcv.DownloadSelected">file_download</span></button>
+            <button class="iconBtn" @onclick="@lcv.cs.ToggleVis"><span class="material-icons-outlined">collections</span></button>
+            <button class="iconBtn" title="Add or Remove Stars From Selected" @onclick="@(() => F.VisToggle(ref lcv.starPromptVis))"><span class="material-icons-outlined">star_outline</span></button>
+            <button class="iconBtn" @onclick="@lcv.DeleteBtnClick"><svg width="24px" height="24px" class="material-icons" viewBox="0 0 24 24"><path d="M15 4V3H9v1H4v2h1v13c0 1.1.9 2 2 2h10c1.1 0 2-.9 2-2V6h1V4h-5zm2 15H7V6h10v13zM9 8h2v9H9zm4 0h2v9h-2z"></path></svg></button>
         </div>
-        <button class="iconBtn" @onclick="@libContentViewer.ClearChecks"><span class="material-icons-outlined">close</span></button>
-        <span id="selectedAmtText">@selectedItemsCount&nbsp;&nbsp;Selected</span>
+        <button class="iconBtn" @onclick="@lcv.ClearChecks"><span class="material-icons-outlined">close</span></button>
+        <span id="selectedAmtText">@lcv.SelectedItemsCount&nbsp;&nbsp;Selected</span>
     </header>
 
     const string topQuery = "SELECT path, date_taken, date_added, starred, uuid, thumbnail, description FROM media WHERE separate = false AND date_taken IS NULL AND date_deleted IS NULL AND date_added >= @oldestOrNewestDT ORDER BY date_added ASC LIMIT 100";
     const string bottomQuery = "SELECT path, date_taken, date_added, starred, uuid, thumbnail, description FROM media WHERE separate = false AND date_taken IS NULL AND date_deleted IS NULL AND date_added <= @oldestOrNewestDT ORDER BY date_added DESC LIMIT 100";
-    <LibraryContentViewer @ref="@libContentViewer" UseDateAdded="true" @bind-HeaderVis="@headerVis" @bind-SelectedItemsCount="@selectedItemsCount" NoItemsText="Items Without a Date Taken Appear Here" NotNullDTQueryTop="@topQuery" NotNullDTQueryBottom="@bottomQuery"
+    <LibraryContentViewer @ref="@lcv" UseDateAdded="true" NoItemsText="Items Without a Date Taken Appear Here" NotNullDTQueryTop="@topQuery" NotNullDTQueryBottom="@bottomQuery" Rerender="@StateHasChanged"
         FirstQuery="SELECT path, date_taken, date_added, starred, uuid, thumbnail, description FROM media WHERE separate = false AND date_taken IS NULL AND date_deleted IS NULL ORDER BY date_added DESC LIMIT 100"/>
-    
-    <CollectionSelector SelectedItems="@libContentViewer.SelectedItems" @bind-HeaderVis="@headerVis" @bind-CollectionsVis="@collectionsVis"/>
-
-    <KeyboardShortcuts AltC="@(() => { F.VisToggle(ref collectionsVis); StateHasChanged(); })"/>
 }
 
 @code {
-    private LibraryContentViewer libContentViewer = new();
-    private int selectedItemsCount;
-    private string headerVis = "hidden", collectionsVis = "hidden";
+    private LibraryContentViewer lcv = new();
 }
