--- a/MemoryMosaic/Pages/Import.razor
+++ b/MemoryMosaic/Pages/Import.razor
@@ -16,7 +16,7 @@
 		return;
 	}
 
-	<KeyboardShortcuts AltC="@(() => { F.VisToggle(ref collectionSelectorVis); StateHasChanged(); })" AltS="@(() => { pathWidthClass = pathWidthClass == "shortWidth" ? "fullWidth" : "shortWidth"; StateHasChanged(); })" CtrlA="@SelectAll" CtrlS="@SaveChanges" CtrlO="@LoadItemsFromDisk" Del="DeleteSelected" Esc="@ClearChecks" Slash="@FocusSearchInput"/>
+	<KeyboardShortcuts AltS="@(() => { pathWidthClass = pathWidthClass == "shortWidth" ? "fullWidth" : "shortWidth"; StateHasChanged(); })" CtrlA="@SelectAll" CtrlS="@SaveChanges" CtrlO="@LoadItemsFromDisk" Del="DeleteSelected" Esc="@ClearChecks" Slash="@FocusSearchInput"/>
 	
 	<header>
 		<button style="visibility: @(selectedItems.Count > 0 ? "visible" : "hidden")" class="iconBtn" @onclick="@ClearChecks"><span class="material-icons">close</span></button>
@@ -70,7 +70,7 @@
 		</div>
 	</header>
 	
-	<CollectionSelector OnCheckClicked="@UpdateCollections" @bind-CollectionsVis="@collectionSelectorVis" SelectedItems="@selectedItems" ClearChecksOnConfirm="false"/>
+	<CollectionSelector OnCheckClicked="@UpdateCollections" SelectedItems="@selectedItems" ClearChecksOnConfirm="false"/>
 	
 	<div id="mainDiv">
 		@for (int i = 0; i < importFiles.Count; i++)
