--- a/MemoryMosaic/wwwroot/css/Trash.css
+++ b/MemoryMosaic/wwwroot/css/Trash.css
@@ -24,14 +24,10 @@ header {
     height: 60px;
 }
 
-#selectedAmtText {
+header > #selectedAmtText {
     font-size: 20px;
-    left: 60px;
-}
-
-#clearBtn {
-    margin-left: 5px;
-    margin-right: 5px;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
 header > div {
