--- a/MemoryMosaic/Pages/LibraryContent/AllItems.razor
+++ b/MemoryMosaic/Pages/LibraryContent/AllItems.razor
@@ -15,11 +15,11 @@
         <span id="selectedAmtText">@lcv.SelectedItemsCount&nbsp;&nbsp;Selected</span>
     </header>
 
-    const string shared = "SELECT path, date_taken, date_added, starred, uuid, thumbnail, description FROM media WHERE date_deleted IS NULL";
-    const string firstQuery = $"{shared} ORDER BY date_taken DESC LIMIT 100";
-    const string topQuery = $"{shared} AND date_taken >= @oldestOrNewestDT ORDER BY date_taken ASC LIMIT 100";
-    const string bottomQuery = $"{shared} AND date_taken <= @oldestOrNewestDT ORDER BY date_taken DESC LIMIT 100";
-    <LibraryContentViewer @ref="@lcv" FirstQuery="@firstQuery" NotNullDTQueryTop="@topQuery" NotNullDTQueryBottom="@bottomQuery" NoItemsText="All Your Items Appear Here" Rerender="@StateHasChanged"/>
+    const string Shared = "SELECT path, date_taken, date_added, starred, uuid, thumbnail, description FROM media WHERE date_deleted IS NULL";
+    const string FirstQuery = $"{Shared} ORDER BY date_taken DESC LIMIT 100";
+    const string TopQuery = $"{Shared} AND date_taken >= @oldestOrNewestDT ORDER BY date_taken ASC LIMIT 100";
+    const string BottomQuery = $"{Shared} AND date_taken <= @oldestOrNewestDT ORDER BY date_taken DESC LIMIT 100";
+    <LibraryContentViewer @ref="@lcv" FirstQuery="@FirstQuery" NotNullDTQueryTop="@TopQuery" NotNullDTQueryBottom="@BottomQuery" NoItemsText="All Your Items Appear Here" Rerender="@StateHasChanged"/>
 }
 
 @code {
