--- a/MemoryMosaic/Pages/LibraryContent/Home.razor
+++ b/MemoryMosaic/Pages/LibraryContent/Home.razor
@@ -15,11 +15,11 @@
         <span id="selectedAmtText">@lcv.SelectedItemsCount&nbsp;&nbsp;Selected</span>
     </header>
 
-    const string shared = "SELECT path, date_taken, date_added, starred, uuid, thumbnail, description FROM media WHERE separate = false AND date_deleted IS NULL AND date_taken";
-    const string firstQuery = $"{shared} IS NOT NULL ORDER BY date_taken DESC LIMIT 100";
-    const string topQuery = $"{shared} >= @oldestOrNewestDT ORDER BY date_taken ASC LIMIT 100";
-    const string bottomQuery = $"{shared} <= @oldestOrNewestDT ORDER BY date_taken DESC LIMIT 100";
-    <LibraryContentViewer @ref="@lcv" FirstQuery="@firstQuery" NotNullDTQueryTop="@topQuery" NotNullDTQueryBottom="@bottomQuery" NoItemsText="Import some items to get started" Rerender="@StateHasChanged"/>
+    const string Shared = "SELECT path, date_taken, date_added, starred, uuid, thumbnail, description FROM media WHERE separate = false AND date_deleted IS NULL AND date_taken";
+    const string FirstQuery = $"{Shared} IS NOT NULL ORDER BY date_taken DESC LIMIT 100";
+    const string TopQuery = $"{Shared} >= @oldestOrNewestDT ORDER BY date_taken ASC LIMIT 100";
+    const string BottomQuery = $"{Shared} <= @oldestOrNewestDT ORDER BY date_taken DESC LIMIT 100";
+    <LibraryContentViewer @ref="@lcv" FirstQuery="@FirstQuery" NotNullDTQueryTop="@TopQuery" NotNullDTQueryBottom="@BottomQuery" NoItemsText="Import some items to get started" Rerender="@StateHasChanged"/>
 }
 
 @code {
