--- a/MemoryMosaic/Pages/LibraryContent/No Date Taken.razor
+++ b/MemoryMosaic/Pages/LibraryContent/No Date Taken.razor
@@ -15,11 +15,11 @@
         <span id="selectedAmtText">@lcv.SelectedItemsCount&nbsp;&nbsp;Selected</span>
     </header>
     
-    const string shared = "SELECT path, date_taken, date_added, starred, uuid, thumbnail, description FROM media WHERE separate = false AND date_taken IS NULL AND date_deleted IS NULL";
-    const string firstQuery = $"{shared} ORDER BY date_added DESC LIMIT 100";
-    const string topQuery = $"{shared} AND date_added >= @oldestOrNewestDT ORDER BY date_added ASC LIMIT 100";
-    const string bottomQuery = $"{shared} AND date_added <= @oldestOrNewestDT ORDER BY date_added DESC LIMIT 100";
-    <LibraryContentViewer @ref="@lcv" UseDateAdded="true" FirstQuery="@firstQuery" NotNullDTQueryTop="@topQuery" NotNullDTQueryBottom="@bottomQuery" NoItemsText="Items Without a Date Taken Appear Here" Rerender="@StateHasChanged"/>
+    const string Shared = "SELECT path, date_taken, date_added, starred, uuid, thumbnail, description FROM media WHERE separate = false AND date_taken IS NULL AND date_deleted IS NULL";
+    const string FirstQuery = $"{Shared} ORDER BY date_added DESC LIMIT 100";
+    const string TopQuery = $"{Shared} AND date_added >= @oldestOrNewestDT ORDER BY date_added ASC LIMIT 100";
+    const string BottomQuery = $"{Shared} AND date_added <= @oldestOrNewestDT ORDER BY date_added DESC LIMIT 100";
+    <LibraryContentViewer @ref="@lcv" UseDateAdded="true" FirstQuery="@FirstQuery" NotNullDTQueryTop="@TopQuery" NotNullDTQueryBottom="@BottomQuery" NoItemsText="Items Without a Date Taken Appear Here" Rerender="@StateHasChanged"/>
 }
 
 @code {
