Add toggleBackgroundScrolling() to MM.js, and use in CollectionSelector to prevent page scrolling while CS active

--- a/MemoryMosaic/Shared/CollectionSelector.razor
+++ b/MemoryMosaic/Shared/CollectionSelector.razor
@@ -138,14 +138,8 @@
 
     public async void ToggleVis()
     {
-        if (CollectionsVis == "hidden")
-        {
-            CollectionsVis = "visible";
-        }
-        else
-        {
-            CollectionsVis = "hidden";
-        }
+        CollectionsVis = CollectionsVis == "hidden" ? "visible" : "hidden";
+        await JSRuntime.InvokeVoidAsync("toggleBackgroundScrolling");
         StateHasChanged();
     }
 
