Add JS funcs to disable/enable scrolling of page. CS close/confirm buttons now use these

--- a/MemoryMosaic/Shared/CollectionSelector.razor
+++ b/MemoryMosaic/Shared/CollectionSelector.razor
@@ -147,6 +147,7 @@
     private async Task CloseBtnClick()
     {
         CollectionsVis = "hidden";
+        await JSRuntime.InvokeVoidAsync("disableBackgroundScrolling");
         ClearAlbumChecks();
         ClearFolderChecks();
     }
