--- a/MemoryMosaic/Shared/LibraryContentViewer.razor
+++ b/MemoryMosaic/Shared/LibraryContentViewer.razor
@@ -140,14 +140,14 @@ If it can't find any content, it shows an h1 saying no content.
 						</div>
 						i++;
 					} while (i < MediaList.Count && MediaList[i].dateTaken == null);
-					@{ i--; } @* This is kind of stupid but idc. Fixes an issue where it would skip some items. *@
+					@{ i--; } @* This is kind of stupid but fixes an issue where it would skip some items. *@
 				</div>
 			</div>
 		}
-		else if (MediaList[i].dateTaken.Value.Day != previousDay)
+		else if (MediaList[i].dateTaken != null && MediaList[i].dateTaken!.Value.Day != previousDay)
 		{
 			<div class="spanAndRow">
-				<span>@(UseDateAdded ? MediaList[i].dateAdded.ToString("ddd, MMM d, yyyy") : MediaList[i].dateTaken.Value.ToString("ddd, MMM d, yyyy"))</span>
+				<span>@(UseDateAdded ? MediaList[i].dateAdded.ToString("ddd, MMM d, yyyy") : MediaList[i].dateTaken!.Value.ToString("ddd, MMM d, yyyy"))</span>
 				<div class="row">
 					@{
 						do
@@ -163,9 +163,9 @@ If it can't find any content, it shows an h1 saying no content.
 							{previousDay = UseDateAdded ? MediaList[i - 1].dateAdded.Day : MediaList[i - 1].dateTaken!.Value.Day;
 							}
 							else
-								previousDay = UseDateAdded ? MediaList[i].dateAdded.Day : MediaList[i].dateTaken.Value.Day;
+								previousDay = UseDateAdded ? MediaList[i].dateAdded.Day : MediaList[i].dateTaken!.Value.Day;
 							i++;
-						} while (i < MediaList.Count && MediaList[i].dateTaken != null && previousDay == (UseDateAdded ? MediaList[i].dateAdded.Day : MediaList[i].dateTaken.Value.Day));
+						} while (i < MediaList.Count && MediaList[i].dateTaken != null && previousDay == (UseDateAdded ? MediaList[i].dateAdded.Day : MediaList[i].dateTaken!.Value.Day));
 						i--;
 					}
 				</div>
