--- a/MemoryMosaic/wwwroot/css/components/LibraryContentViewer.css
+++ b/MemoryMosaic/wwwroot/css/components/LibraryContentViewer.css
@@ -85,8 +85,7 @@ h1 {
 #moreContentTopDiv {
     background-color: transparent;
     outline: 10px solid red;
-    width: available;
-    width: -moz-available;
+    width: 100%;
     height: 600px;
     position: absolute;
     z-index: 800;
@@ -95,8 +94,7 @@ h1 {
 #moreContentBottomDiv {
     background-color: transparent;
     outline: 10px solid blue;
-    width: available;
-    width: -moz-available;
+    width: 100%;
     height: 600px;
     position: absolute;
     z-index: 800;
