Fix CollectionCreator not having a text input with a black background

--- a/MemoryMosaic/wwwroot/css/components/CollectionCreator.css
+++ b/MemoryMosaic/wwwroot/css/components/CollectionCreator.css
@@ -9,7 +9,10 @@
     font-size: 16px;
     margin-left: 6px;
     margin-right: 6px;
-    color: black; /* Font color */
+    background-color: black;
+    border: 1px solid white;
+    color: white;
+    border-radius: 4px;
 }
 
 #collectionCreator > #error {
